cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_212.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/des_enc.c:146: error: DEAD_STORE
  The value written to &l (type unsigned int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/des_enc.c:146:5: Write of unused value
144.       data[0] = ROTATE(l, 3) & 0xffffffffL;
145.       data[1] = ROTATE(r, 3) & 0xffffffffL;
146.       l = r = t = u = 0;
           ^
147.   }
148.   
